#618 PokaYokeUmlProfileUtil: use `List.of` instead of `Arrays.asList`